2017-02-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ModalDialog.cpp (closeDialog): set returnValue and
	stop waiting.
	* src/client/ModalDialog.hpp (returnValue): add the exec() function
	return value as member.

2017-02-20  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/modal_dialog.layout: add the cancel button.
	* src/client/ModalDialog.hpp (ModalDialog): add the title parameter
	to constructor.
	* media/layouts/modal_dialog.layout: add the modal dialog layout.

2017-02-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ModalDialog.cpp (exec): directly call GameEngine::
	drawOverlays.
	* src/client/GameEngine.hpp (overlayHandler): now call drawOverlays().
	* src/client/GameEngine.hpp (drawOverlays): new public method to be
	called from ModalDialog.
	* src/client/ModalDialog.cpp (exec): parameter is now a pointer to
	GameEngine.

	* src/client/ModalDialog.cpp (exec): move show() before starting
	the endless loop.

2017-01-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ModalDialog.cpp (exec): calling CEGUI's context function
	clearGeometry(CEGUI::RQ_OVERLAY) to make geometry buffers drawn again.
	* src/client/ModalDialog.cpp (exec): add Ogre::Root parameter to
	eb able to call renderOneFrame().

2017-01-26  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): now using ModalDialog.
	* src/client/ModalDialog.hpp (ModalDialog): first implementation.

2017-01-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LoadingBar.cpp: remove unneeded class.

2017-01-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (getNextResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/GameEngine.cpp (getPreviousResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/ResolutionHandler.hpp: fix multiple inclusion guard name.

	* src/logger/Logger.cpp: document some members.
	* src/logger/LoggerOutputFile.cpp: update doxygen documentation.
