@@ -135,6 +135,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-02-24 ven. 13:07]--[2017-02-24 ven. 13:39] =>  0:32
      CLOCK: [2017-02-24 ven. 12:34]--[2017-02-24 ven. 12:42] =>  0:08
      CLOCK: [2017-02-24 ven. 11:47]--[2017-02-24 ven. 12:31] =>  0:44
      CLOCK: [2017-02-20 lun. 12:04]--[2017-02-20 lun. 12:52] =>  0:48
@@ -209,12 +210,16 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Trying to move clearGeometry and drawOverlay between messagePump and renderOneFrame
 	Don't work
       - [X] Still doesn't work	
-  - [ ] It seems the Modal dialog doesn't work when called twice
+  - [X] It seems the Modal dialog doesn't work when called twice
     Maybe because the ModalDialog::closeDialog() only hide() the dialog.
-  - [ ] Create a ConfirmationDialog class (based on ModalDialog)
+  - [-] Create a ConfirmationDialog class (based on ModalDialog)
     For instance, ModalDialog *is* the ConfirmationDialog. We need to
     move some members in this new class. It is correctly shown but events
     don't work.
+    - [X] Create an empty class
+    - [ ] Move events handler from constructor
+    - [ ] Then move event handlers
+      exec() should stay in ModalDialog
 - [ ] Some overlays disappear in 1280x1024 resolution
   - List all overlays affected by this bug
     At least tempMessage
